OOPS-56: integrate ui and backend server